# ashley

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tidy.sh
components/: benchmark-results.md  changelog-update.md  ci-github-actions.md  commit-format-restage.md  commit-message.md  commit-push.md  commit-staging.md  formatter-python.md  formatter-typescript.md  guidelines-coding.md  guidelines-installing.md  guidelines-style-google.md  i18n-react.md  quality-assurance.md  readme-template.md  readme-update.md  scaffold-makefile.md  ui-styling.md
components/stack/: flutter.md  python.md  typescript.md
res/code/python/: data_model.py
res/code/typescript/: .prettierrc  Locale.tsx  LocaleHelper.ts  eslint.config.js
res/docs/: readme-example.md
scripts/: install_claude.sh  install_uv.sh  remote-install.sh
skills/: brainstorm.jsonc  changelog.jsonc  ci.jsonc  claudemd.jsonc  coding.jsonc  commit.jsonc  debug.jsonc  feat.jsonc  optimize.jsonc  pretty.jsonc  readme.jsonc  rebase.jsonc  refactor.jsonc  scaffold.jsonc
src/ashley/: __init__.py  __main__.py  cli.py  config.py  detect.py  generate.py  history.py  hooks.py  install.py  pipeline.py  prompt.py  sessions.py  update.py
src/ashley/tui/: __init__.py  app.py  create_app.py  history_app.py  sessions_app.py
tests/: test_config.py  test_detect.py  test_generate.py  test_history_stats.py  test_hooks.py  test_pipeline.py  test_prompt.py  test_sessions_app.py
