[project]
name = "ashley"
version = "0.1.0"
description = "Interactive skill set framework for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "json5>=0.13.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "beautysh>=6.4.2",
    "commitizen>=4.12.1",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
ash = "ashley.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashley"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["ashley"]
